<resources>
    <string name="app_name">VK Testers Mentoring</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"></string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_longrid">Лонгриды</string>
    <string name="menu_gallery">Галерея</string>
    <string name="menu_slideshow">Мусор</string>
    <string name="open">Открыть</string>
    <string name="menu_bugs">Отчетность</string>
    <string name="send_ur_count_rep">Запиши в это поле общее количество отчетов за неделю.</string>
    <string name="send_ur_wanna_count_rep">Количество отчетов в неделю, которое ты хочешь выполнить.</string>
    <string name="bad_scope">Вам нужно трудиться еще больше, чтобы достичь поставленной планки. Ваш коэффициент:</string>
    <string name="register">Регистрация</string>
    <string name="register_btn">"Зарегистрироваться"</string>
    <string name="dicto">Диктофон</string>
    <string name="upload">Загрузка</string>
    <string name="string_url_photo_upload">Введите URL фотографии</string>
    <string name="well_scope">Норма перевыполнена. Переоцените желаемое кол-во отчетов.</string>
    <string name="save">Сохранить</string>
    <string name="set_password">Введите пароль</string>
    <string name="set_indent">Введите идентификатор</string>
    <string name="suffix_vktm">\@vktm</string>
    <string name="login">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="input_password">Введите пароль</string>
    <string name="login_l">Войти</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="default_fragment">Начальное окно</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="plug_text_empty_grid">По запросу ничего не найдено.</string>
    <string name="profile">Профиль</string>
    <string name="third_tab">Изменить 3ий таб</string>
    <string name="hide_third_tab">Скрыть 3ий таб</string>
</resources>